--- a/angular.json
+++ b/angular.json
@@ -3,9 +3,13 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "angulartalk": {
+    "angulartensorflowjs": {
       "projectType": "application",
-      "schematics": {},
+      "schematics": {
+        "@schematics/angular:component": {
+          "style": "scss"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
@@ -13,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/angulartalk",
+            "outputPath": "dist/angulartensorflowjs",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,7 +28,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.scss"
             ],
             "scripts": []
           },
@@ -63,18 +68,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "angulartalk:build"
+            "browserTarget": "angulartensorflowjs:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "angulartalk:build:production"
+              "browserTarget": "angangulartensorflowjsular8:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "angulartalk:build"
+            "browserTarget": "angulartensorflowjs:build"
           }
         },
         "test": {
@@ -89,7 +94,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "./node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+              "src/styles.scss"
             ],
             "scripts": []
           }
@@ -111,15 +117,16 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angulartalk:serve"
+            "devServerTarget": "angulartensorflowjs:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "angulartalk:serve:production"
+              "devServerTarget": "angulartensorflowjs:serve:production"
             }
           }
         }
       }
-    }},
-  "defaultProject": "angulartalk"
+    }
+  },
+  "defaultProject": "angulartensorflowjs"
 }
